<resources>
    <string name="app_name">docmeapp</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="msg_search_drugs_c">Search drugs, category</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_03_00_pm">03:00 PM</string>
    <string name="lbl_103lbs">103lbs</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
    <string name="msg_the_horror_of_t">The Horror Of The Second Wave Of COVID-19</string>
    <string name="lbl_betadine">Betadine</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="lbl_diet">Diet</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_about">About</string>
    <string name="lbl_top_doctor">Top Doctor</string>
    <string name="lbl_description">Description</string>
    <string name="msg_2640_cabin_cree">2640 Cabin Creek Rd #102 Alexandria, Virginia(VA), 22314</string>
    <string name="msg_find_your_desir">Find your desire 
health solution</string>
    <string name="lbl_26_98">$26.98</string>
    <string name="msg_wednesday_jun">Wednesday, Jun 23, 2021 | 10:00 AM</string>
    <string name="msg_enter_your_pass">Enter your password</string>
    <string name="msg_early_protectio">Early protection for
your family health</string>
    <string name="lbl_general">General</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="lbl_jun_10_20212">Jun 10, 2021 </string>
    <string name="lbl_756cal">756cal</string>
    <string name="msg_do_you_have_fev">Do you have fever?</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_logout2">Logout</string>
    <string name="msg_create_your_new">Create your new password to login</string>
    <string name="msg_find_a_lot_of_s">Find a lot of specialist doctors in one place</string>
    <string name="msg_sign_in_with_go">Sign in with Google</string>
    <string name="msg_popular_article">Popular Articles</string>
    <string name="lbl_product_on_sale">Product on Sale</string>
    <string name="lbl_01_00">$01.00</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_08_00_pm">08:00 PM</string>
    <string name="lbl_jun_8_2021">Jun 8, 2021 </string>
    <string name="lbl_schedule">Schedule</string>
    <string name="msg_trending_articl">Trending Articles</string>
    <string name="msg_i_don_t_have_an2">I don,t have any fever, but headchace is painful</string>
    <string name="lbl_15_99">$15.99</string>
    <string name="lbl_09_00_am">09:00 AM</string>
    <string name="msg_beauty_tips_for">"Beauty Tips For Face: 10 Dos and Don'ts for Naturally Beautiful Skin"</string>
    <string name="lbl_085281882151">085281882151</string>
    <string name="msg_search_doctor">Search doctor, drugs, articles...</string>
    <string name="lbl_reschedule">Reschedule</string>
    <string name="lbl_create_password">Create Password</string>
    <string name="msg_once_again_you">Once again you login successfully
into medidoc app</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_obh_combi">OBH Combi</string>
    <string name="msg_forgot_your_pas">Forgot Your Password?</string>
    <string name="lbl_psychiatrist">Psychiatrist</string>
    <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
    <string name="lbl_chardiologist">Chardiologist</string>
    <string name="lbl_hospital">Hospital</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_medidoc">medidoc </string>
    <string name="lbl_10_99">$10.99</string>
    <string name="lbl_payment_success">Payment Success</string>
    <string name="lbl_02_00_pm">02:00 PM</string>
    <string name="lbl_6_99">$6.99</string>
    <string name="msg_enter_new_passw">Enter new password</string>
    <string name="lbl_3pcs">3pcs</string>
    <string name="msg_obh_combi_is_a">OBH COMBI  is a cough medicine containing, Paracetamol, Ephedrine HCl, and Chlorphenamine maleate which is used to relieve coughs accompanied by flu symptoms such as fever, headache, and sneezing... Read more</string>
    <string name="msg_i_have_sufferin">I have suffering from headache and cold for 3 days, I took 2 tablets of dolo, but still pain</string>
    <string name="lbl_5min_read2">5min read</string>
    <string name="lbl_xyz_gmail_com">xyz@gmail.com</string>
    <string name="lbl_60_00">$60.00</string>
    <string name="lbl_psychologist">Psychologist</string>
    <string name="lbl_canceled">Canceled</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_group">Group</string>
    <string name="lbl_08528188">08528188*** </string>
    <string name="lbl_appointmnet">Appointmnet</string>
    <string name="lbl_23">23</string>
    <string name="lbl_book_now">Book Now</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_5_99">$5.99</string>
    <string name="lbl_chat_doctor">Chat Doctor</string>
    <string name="msg_enter_code_that">Enter code that we have sent to your number 08528188*** </string>
    <string name="lbl_4_7">4.7</string>
    <string name="msg_the_25_healthie">The 25 Healthiest Fruits You Can Eat, According to a Nutritionist</string>
    <string name="msg_i_agree_to_the">I agree to the medidoc Terms of Service and Privacy Policy</string>
    <string name="lbl_100ml">100ml</string>
    <string name="lbl_50ml">50ml</string>
    <string name="lbl_4_0">4.0</string>
    <string name="lbl_800m_away">800m away</string>
    <string name="lbl_jun_9_2021">Jun 9, 2021 </string>
    <string name="lbl_psikeater">Psikeater</string>
    <string name="lbl_dr_marcus">Dr. Marcus</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_helthio">Helthio</string>
    <string name="lbl_10_30_am">10:30 AM</string>
    <string name="lbl_doctor_detail">Doctor Detail</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_private">Private</string>
    <string name="msg_enter_verificat">Enter Verification Code</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_skip">Skip</string>
    <string name="msg_yeay_welcome_b">Yeay! Welcome Back</string>
    <string name="msg_type_message">Type message ...</string>
    <string name="msg_related_article">Related Articles</string>
    <string name="lbl_find_doctors">Find Doctors</string>
    <string name="lbl_5_min_read">5 min read</string>
    <string name="lbl_8_min_read">8 min read</string>
    <string name="msg_swipe_back_to_m">Swipe back to menu</string>
    <string name="lbl_log_in2">Log In</string>
    <string name="lbl_cardio">Cardio</string>
    <string name="lbl_success">Success</string>
    <string name="msg_let_s_get_start">Let\u2019s get started!</string>
    <string name="lbl_28_06_2022">28/06/2022</string>
    <string name="msg_your_payment_ha">Your payment has been successful, you can have a consultation session with your trusted doctor</string>
    <string name="lbl_dr_alysa_hana">Dr. Alysa Hana</string>
    <string name="msg_consultion_star">Consultion Start</string>
    <string name="msg_enter_code_that2">Enter code that we have sent to your number </string>
    <string name="msg_enter_your_emai">Enter your email</string>
    <string name="lbl_or">OR</string>
    <string name="msg_sign_in_with_ap">Sign in with Apple</string>
    <string name="lbl_covid_19">Covid-19</string>
    <string name="msg_i_agree_to_the2">I agree to the medidoc Terms of Service 
and Privacy Policy</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="msg_didn_t_receive_the">Didn\u2019t receive the code?</string>
    <string name="lbl_confirmed">Confirmed</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_1_00">$1.00</string>
    <string name="msg_upload_prescrip">Upload Prescription</string>
    <string name="msg_your_recent_doc">Your Recent Doctors</string>
    <string name="lbl_9_99">$9.99</string>
    <string name="lbl_jun_12_2021">Jun 12, 2021</string>
    <string name="lbl_dentist">Dentist</string>
    <string name="lbl_resend">Resend</string>
    <string name="lbl_taxes">Taxes</string>
    <string name="lbl_reason">Reason</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_2_00_pm">2:00 PM</string>
    <string name="msg_jamesschleifer">jamesschleifer@gmail.com</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_popular_product">Popular Product</string>
    <string name="msg_chat_with_doctor">Chat With Doctor</string>
    <string name="lbl_consultation">Consultation</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam... </string>
    <string name="lbl_learn_more">Learn more</string>
    <string name="lbl_admin_fee">Admin Fee</string>
    <string name="msg_ok_do_you_have">Ok, Do you have fever? is the
headchace severe</string>
    <string name="lbl_chest_pain">Chest pain</string>
    <string name="lbl_amelia_renata">Amelia Renata</string>
    <string name="msg_order_quickly_w">Order quickly with
Prescription</string>
    <string name="lbl_75ml">75ml</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_bodrex_herbal">Bodrex Herbal</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_26_982">$ 26.98</string>
    <string name="msg_create_new_pass">Create New Password</string>
    <string name="lbl_wed">Wed</string>
    <string name="msg_get_connect_our">Get connect our Online Consultation</string>
    <string name="lbl_articles">Articles</string>
    <string name="lbl_00_05_24">00:05:24</string>
    <string name="lbl_20pcs">20pcs</string>
    <string name="lbl_09_04">09:04</string>
    <string name="msg_obh_combi_is_a2">OBH COMBI  is a cough medicine containing, Paracetamol, Ephedrine HCl, and Chlorphenamine maleate which is used to relieve coughs accompanied by flu symptoms such as fever, headache, and sneezing... </string>
    <string name="lbl_dr_gerty_cori">Dr. Gerty Cori</string>
    <string name="msg_recommended_doc">Recommended Doctors</string>
    <string name="lbl_doctor">Doctor</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_26_06_2022">26/06/2022</string>
    <string name="msg_consult_only_wi">Consult only with a doctor you trust</string>
    <string name="lbl_01_00_pm">01:00 PM</string>
    <string name="lbl_215bpm">215bpm</string>
    <string name="lbl_dr_stevi">Dr. Stevi</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_panadol">Panadol</string>
    <string name="msg_i_don_t_have_an">I don,t have any fever, but headchace...</string>
    <string name="msg_dr_marcus_hori">Dr. Marcus Horizon</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_10_24">10.24</string>
    <string name="lbl_payment_detail">Payment Detail</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_my_cart">My Cart</string>
    <string name="lbl_1">1</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_visa">VISA</string>
    <string name="lbl_25_98">$25.98</string>
</resources>